tests/machine/x/c/partial_application.error
line: 0
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/partial_application.c: In function ‘main’:
/workspace/mochi/tests/machine/x/c/partial_application.c:17:22: error: too few arguments to function ‘add’
   17 |   int (*add5)(int) = add(5);
      |                      ^~~
/workspace/mochi/tests/machine/x/c/partial_application.c:14:5: note: declared here
   14 | int add(int a, int b) { return (a + b); }
      |     ^~~

   1: #include <stdio.h>
